examples/bad/ex2.shl
int main(){
    return 0;
}
int foo(int x,int x){
    return 0;
}